# Tamayo-2.5D-Engine-For-Unity

./: .clang-format  .gitignore  Altas de Mexico  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  Rufino Tamayo  Tamayo2.5D.txt
Assets/: Demo Tecnica Sonic Adventure 3 Green Forest.unity  Shaders.fbx  SonicMove.cs
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
ProjectSettings/: ProjectSettings.asset
